@@ -22,7 +22,7 @@ import net.minecraft.client.model.geom.ModelPart;
 import net.minecraft.client.model.HumanoidModel;
 import net.minecraft.client.Minecraft;
 
-import net.mcreator.craftkaisen.client.model.Modeluniform;
+import net.mcreator.craftkaisen.client.model.ModelSorcererArmor;
 
 import java.util.function.Consumer;
 import java.util.Map;
@@ -85,9 +85,9 @@ public abstract class JujutsuSorcererUniformItem extends ArmorItem {
 				@Override
 				@OnlyIn(Dist.CLIENT)
 				public HumanoidModel getHumanoidArmorModel(LivingEntity living, ItemStack stack, EquipmentSlot slot, HumanoidModel defaultModel) {
-					HumanoidModel armorModel = new HumanoidModel(new ModelPart(Collections.emptyList(), Map.of("body", new Modeluniform(Minecraft.getInstance().getEntityModels().bakeLayer(Modeluniform.LAYER_LOCATION)).Body, "left_arm",
-							new Modeluniform(Minecraft.getInstance().getEntityModels().bakeLayer(Modeluniform.LAYER_LOCATION)).LeftArm, "right_arm",
-							new Modeluniform(Minecraft.getInstance().getEntityModels().bakeLayer(Modeluniform.LAYER_LOCATION)).RightArm, "head", new ModelPart(Collections.emptyList(), Collections.emptyMap()), "hat",
+					HumanoidModel armorModel = new HumanoidModel(new ModelPart(Collections.emptyList(), Map.of("body", new ModelSorcererArmor(Minecraft.getInstance().getEntityModels().bakeLayer(ModelSorcererArmor.LAYER_LOCATION)).torso, "left_arm",
+							new ModelSorcererArmor(Minecraft.getInstance().getEntityModels().bakeLayer(ModelSorcererArmor.LAYER_LOCATION)).left_arm, "right_arm",
+							new ModelSorcererArmor(Minecraft.getInstance().getEntityModels().bakeLayer(ModelSorcererArmor.LAYER_LOCATION)).right_arm, "head", new ModelPart(Collections.emptyList(), Collections.emptyMap()), "hat",
 							new ModelPart(Collections.emptyList(), Collections.emptyMap()), "right_leg", new ModelPart(Collections.emptyList(), Collections.emptyMap()), "left_leg", new ModelPart(Collections.emptyList(), Collections.emptyMap()))));
 					armorModel.crouching = living.isShiftKeyDown();
 					armorModel.riding = defaultModel.riding;
@@ -104,7 +104,12 @@ public abstract class JujutsuSorcererUniformItem extends ArmorItem {
 
 		@Override
 		public String getArmorTexture(ItemStack stack, Entity entity, EquipmentSlot slot, String type) {
-			return "craft_kaisen:textures/entities/uniform.png";
+			return "craft_kaisen:textures/entities/sorcereramor.png";
+		}
+
+		@Override
+		public boolean makesPiglinsNeutral(ItemStack itemstack, LivingEntity entity) {
+			return false;
 		}
 	}
 
@@ -120,8 +125,8 @@ public abstract class JujutsuSorcererUniformItem extends ArmorItem {
 				@OnlyIn(Dist.CLIENT)
 				public HumanoidModel getHumanoidArmorModel(LivingEntity living, ItemStack stack, EquipmentSlot slot, HumanoidModel defaultModel) {
 					HumanoidModel armorModel = new HumanoidModel(new ModelPart(Collections.emptyList(),
-							Map.of("left_leg", new Modeluniform(Minecraft.getInstance().getEntityModels().bakeLayer(Modeluniform.LAYER_LOCATION)).LeftLeg, "right_leg",
-									new Modeluniform(Minecraft.getInstance().getEntityModels().bakeLayer(Modeluniform.LAYER_LOCATION)).RightLeg, "head", new ModelPart(Collections.emptyList(), Collections.emptyMap()), "hat",
+							Map.of("left_leg", new ModelSorcererArmor(Minecraft.getInstance().getEntityModels().bakeLayer(ModelSorcererArmor.LAYER_LOCATION)).left_leg, "right_leg",
+									new ModelSorcererArmor(Minecraft.getInstance().getEntityModels().bakeLayer(ModelSorcererArmor.LAYER_LOCATION)).right_leg, "head", new ModelPart(Collections.emptyList(), Collections.emptyMap()), "hat",
 									new ModelPart(Collections.emptyList(), Collections.emptyMap()), "body", new ModelPart(Collections.emptyList(), Collections.emptyMap()), "right_arm", new ModelPart(Collections.emptyList(), Collections.emptyMap()),
 									"left_arm", new ModelPart(Collections.emptyList(), Collections.emptyMap()))));
 					armorModel.crouching = living.isShiftKeyDown();
@@ -139,7 +144,12 @@ public abstract class JujutsuSorcererUniformItem extends ArmorItem {
 
 		@Override
 		public String getArmorTexture(ItemStack stack, Entity entity, EquipmentSlot slot, String type) {
-			return "craft_kaisen:textures/entities/uniform.png";
+			return "craft_kaisen:textures/entities/sorcereramor.png";
+		}
+
+		@Override
+		public boolean makesPiglinsNeutral(ItemStack itemstack, LivingEntity entity) {
+			return false;
 		}
 	}
 }
